# sentinel-pvm

./: .env.example  .gitignore  .gitmodules  LICENSE  PROGRESS.md  README.md  deployments.json  package-lock.json  project.md  vercel.json
agent/: agent.py  requirements.txt
backend/: package-lock.json  package.json  server.js
frontend/: check_console.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend-next/: package.json
frontend-next/.next/: build-manifest.json  fallback-build-manifest.json  required-server-files.js
frontend-next/.next/dev/: build-manifest.json  prerender-manifest.json  trace
frontend-next/.next/server/: next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend-next/src/: App.jsx  main.jsx
frontend-next/src/components/: AppShell.jsx  CustomCursor.jsx  Dashboard.jsx  DataTable.jsx  FeedItem.jsx  FieldZone.jsx  KPICard.jsx  Navbar.jsx  RunAgentPanel.jsx  SmoothScroll.jsx  TelemetryGrid.jsx
frontend-next/src/config/: chain.js  contracts.js  thirdweb.js
frontend-next/src/hooks/: useAgent.js  (+1 more)
frontend-old/.next/: BUILD_ID  prerender-manifest.json  required-server-files.json  trace  trace-build
frontend/src/: App.jsx  index.css  main.jsx
pvm-engine/: Cargo.toml  deploy.sh  test_deploy.sh
pvm-engine/.cargo/: config.toml
pvm-engine/linker/: Cargo.toml
pvm-engine/linker/src/: main.rs
pvm-engine/src/: lib.rs
solidity-frontend/: foundry.toml
solidity-frontend/script/: DeploySentinel.s.sol
solidity-frontend/src/: Sentinel.sol
solidity-frontend/test/: Sentinel.t.sol
(+217 files in other folders)
