[package]
name = "pvm-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"] }
bulletproofs = { version = "4.0", default-features = false }
pallet-revive-uapi = { version = "0.1", default-features = false }
picoalloc = "0.1"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
strip = true
