[package]
name = "pvm-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
pallet-revive-uapi = { version = "0.10", default-features = false }
polkavm-derive = "0.30"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
strip = false
incremental = false
